--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "express": "4.13.4",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "nodemon": "^1.17.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
